--- a/css/style.css
+++ b/css/style.css
@@ -1,148 +1,88 @@
-html{
-    margin: 0;
-    background-color: #c2bdbd;
+.bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
 }
-* body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-header{
-    background-color: #635f5f;
-}
-header nav div {
-    display: flex;
-    justify-content: space-between;
-}
-header ul{
-    /* background-color: rgb(125, 129, 125); */
-    padding: 5px;
-    justify-content: space-between;
-    font-size: 1.3rem;
-    list-style-type: none;
-}
-header img{
-    width: 32px;
-    height: 32px;
-    
-}
-html{
-    font-size: 62.5%;
-}
-footer{
-/*     
-    background-color: rgb(125, 129, 125);
 
-    padding-bottom: 1px;
-     
-    position: absolute;
-    bottom: 0;
+@media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+    }
+}
+
+.b-example-divider {
     width: 100%;
-    height: 40px;
-    color: white; */
-    position:fixed;
-    left:0px;
-    bottom:0px;
-    height:30px;
-    width:100%;
-    background:#3d3d3d41;
-    text-align: center; 
-    
-} 
-/* main .container nav {
-    background-color: #333;
-    font-size: 1.5em;
-} */
-a:link, :visited{
-    color: #fff;
+    height: 3rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: solid rgba(0, 0, 0, 0.15);
+    border-width: 1px 0;
+    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
+        inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+}
+
+.b-example-vr {
+    flex-shrink: 0;
+    width: 1.5rem;
+    height: 100vh;
+}
+
+.bi {
+    vertical-align: -0.125em;
+    fill: currentColor;
+}
+
+.nav-scroller {
+    position: relative;
+    z-index: 2;
+    height: 2.75rem;
+    overflow-y: hidden;
+}
+
+.nav-scroller .nav {
+    display: flex;
+    flex-wrap: nowrap;
+    padding-bottom: 1rem;
+    margin-top: -1px;
+    overflow-x: auto;
+    text-align: center;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+}
+
+.btn-bd-primary {
+    --bd-violet-bg: #712cf9;
+    --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
+
+    --bs-btn-font-weight: 600;
+    --bs-btn-color: var(--bs-white);
+    --bs-btn-bg: var(--bd-violet-bg);
+    --bs-btn-border-color: var(--bd-violet-bg);
+    --bs-btn-hover-color: var(--bs-white);
+    --bs-btn-hover-bg: #6528e0;
+    --bs-btn-hover-border-color: #6528e0;
+    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+    --bs-btn-active-color: var(--bs-btn-hover-color);
+    --bs-btn-active-bg: #5a23c8;
+    --bs-btn-active-border-color: #5a23c8;
+}
+
+.bd-mode-toggle {
+    z-index: 1500;
+}
+
+.bd-mode-toggle .dropdown-menu .active .bi {
+    display: block !important;
+}
+
+#carouselPrinc{
+/* width:100%; */
+/* height: 50vh; */
+height:390px;
+overflow:hidden;
+}
+
+.mylink {
     text-decoration: none;
-    
-}
-
-.menu-nav a:link, :visited{
-    width: 100%;
-    background-color: #0ea127;
-    border-radius: 3px;
-    font-size: 1.5em;
-    text-align:center;
-
-}
-/* .container{
-    background-color: rgb(104, 60, 3);
-} */
-
-h1{
-    text-align: center;
-    margin-bottom: 15px;
-    font-size: 3rem;
-}
-
-.grid{
-    display: grid;
-    max-width: 1300px;
-    gap: 15px;
-    justify-content: center;
-    margin:auto;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 280px));
-    padding-bottom: 5px;
-}
-.items {
-    /* border: solid thin rgb(255, 0, 0); */
-    padding: 10px;
-    box-shadow: 10px 10px 10px rgb(31, 24, 24);
-    border-radius: 10px;
-}
-.items{
-    border-radius: 10px;
-    img{
-    
-    width: 100%;
-    height: 170px;
-    
-}
-}
-
-
-.info{
-    padding: 15px;
-}
-.info h3{
-    font-size: 1.8rem;
-    text-align: center;
-
-}
-.info p{
-    font-size: 1.2rem;
-    color: rgb(63, 63, 63);
-}
-.precio{
-    display: flex;
-    justify-content: space-between;
-    font-weight: bolder;
-}
-.precio p{
-    font-size: 1.9rem;
-    color: rgb(165, 167, 166);
-}
-.precio p:first-child{
-    text-decoration: line-through;
-}
-
-.info button{
-    padding: 1rem;
-    width: 100%;
-    background-color: darkcyan;
-    border: none;
-    border-radius: 5px;
-    outline: none;
-    color: #fff;
-    text-transform: uppercase;
-    font: 1.1rem;
-    cursor: pointer;
-    margin-bottom: 1px;
-}
-.info button:hover{
-    background-color: aqua;
-    transform: .5s;
 }
