--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,39 @@ overflow:hidden;
 .mylink {
     text-decoration: none;
 }
+
+/*Paginacion*/
+.paginacion {
+	margin:20px 0;
+}
+
+.paginacion ul {
+	list-style:none;
+	text-align: center;
+}
+
+.paginacion ul li {
+	display:inline-block;
+	margin-right:10px;
+}
+
+.paginacion ul li a {
+	display:block;
+	padding:10px 20px;
+	color:#fff;
+	background:#024959;
+	text-decoration: none;
+}
+
+.paginacion ul li a:hover {
+	background:#037E8C;
+}
+
+.paginacion ul li .active {
+	background:#037E8C;
+	font-weight:bold;
+}
+.container .grid .items img{
+    width: 240px;
+    height: 240px;
+}
